Uudelleenkäynnistystä vähän hiottu kuntoon